# PulseRasterNG

./: .gitignore  .gitmodules  .luarc.json  CLAUDE.md  CMakeLists.txt  README.md  README.me  main.cpp
audio_engine/: AudioApi.cpp  AudioApi.hpp  SC_Server.cpp  SC_Server.hpp  pdApi.cpp  pdApi.hpp  pdArg.hpp  pdEngine.cpp  pdEngine.hpp  pdEventQueue.hpp  pdMidi.cpp  pdMidi.hpp
controller_engine/: ControllerApi.hpp  EventProcessor.cpp  EventProcessor.hpp  MidiManager.cpp  MidiManager.hpp
examples/display_elements/: elements.lua
examples/lct/: lct.lua
examples/midi/: midi.lua
examples/midi_to_lua/: midi2lua.lua
examples/mkmr/: demo.lua
examples/mouse_events/: mouse_events.lua
prng_lua_lib/: display_elements.lua  music_lib.lua  patch.lua
puredata/: bend_route.pd  chirp.pd  count_metro.pd  ctl_route.pd  delay.pd  downsample.pd  drumz.pd  dust.pd  everyn.pd  gain.pd  gain_send.pd  heyTester.pd  lct_pan.pd  lct_polyfm.pd  lct_polysampler.pd  lct_polysynth.pd  lop.pd  main.pd  master.pd  message_sender.pd  metronome.pd  midi_mon.pd  midi_route.pd  mkmr_cello.pd  mkmr_chimes.pd  mkmr_chorus.pd  mkmr_harp.pd  mkmr_maceta.pd  mkmr_marimba.pd  mkmr_phaser.pd  mkmr_rds.pd  mkmr_sus_wrap.pd  modal.pd  mode.pd  msg_delay.pd  msg_port.pd  msg_seq.pd  multi_message.pd  note_route.pd  number_message.pd  (+15 more)
puredata/lib/: aux_router.pd  control.pd  env_gen.pd  exp_env.pd  level_router.pd  message_sender.pd  number_message.pd  number_message_pat.pd  playSample.pd  pow_env.pd  router_messages.pd  sampleLoader.pd  send.pd  simple_router.pd
script_runner/: ScriptRunner.cpp  ScriptRunner.h
scripts/: midi_test.lua  performance.lua  twirling_cube.lua  wiggle_ball.lua
synthdefs/: bear.scsyndef  clink.scsyndef
timing_api/: Scheduler.cpp  Scheduler.hpp  TimingApi.hpp
visual_engine/: GraphicsApi.cpp  GraphicsApi.hpp  VisualEngine.cpp  VisualEngine.hpp
